feat: 보이스 설정을 UserVoiceSetting 기준으로 통합
- TTS 보이스 결정 로직을 synthesizeToFile로 일원화
- 프리셋 키를 실제 ElevenLabs voice_id로 매핑

--- a/public/pages/call.html
+++ b/public/pages/call.html
@@ -10,7 +10,7 @@
         <div class="container">
             <div class="header-box">
                 <h1><a href="call.html">for call phobia</a></h1>
-                <a href="setting.html" class="settings-icon" aria-label="설정">
+                <a href="/pages/setting.html" class="settings-icon" aria-label="설정">
                     <svg
                         width="28"
                         height="28"
