feat: 로그인 후 콜 화면 이동 추가

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -40,13 +40,6 @@
                 </p>
             </div>
         </div>
-
-        <script>
-            document
-                .getElementById("googleLoginBtn")
-                .addEventListener("click", () => {
-                    window.location.href = "/auth/google";
-                });
-        </script>
+        <script src="../javascript/home.js"></script>
     </body>
 </html>
