--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -26,7 +26,7 @@
                 >
                     <img
                         class="google-icon"
-                        src="./images/google-logo.png"
+                        src="/pages/images/google-logo.png"
                         alt="Google"
                     />oogle로 로그인
                 </button>
