feat: 통화 화면에 로그인 사용자 이름 표시

--- a/public/pages/call.html
+++ b/public/pages/call.html
@@ -28,7 +28,7 @@
 
             <div class="call-section">
                 <h2 class="second-title">for call phobia</h2>
-                <h3 class="welcome">환영합니다, 계정이름님!</h3>
+                <h3 class="welcome">환영합니다, <span id="userName"></span>님!</h3>
 
                 <input
                     class="input-phone-number"
