fix: 통화 종료 버튼 클릭 후 히스토리 이동 시 세션 튕김 방지

--- a/public/pages/finished_call.html
+++ b/public/pages/finished_call.html
@@ -85,7 +85,7 @@
 
             if (finishBtn) {
                 finishBtn.addEventListener("click", function () {
-                    window.location.href = "call.html";
+                    window.location.href = "call_history.html";
                 });
             }
         })();
