feat: 최근 통화 기록에 통화 목적 표시

--- a/public/pages/call_history.html
+++ b/public/pages/call_history.html
@@ -20,7 +20,7 @@
                 <section class="ch-card">
                     <h2 class="ch-title">최근 통화 기록</h2>
 
-                    <!-- JS가 통화 기록(오늘/어제/날짜 섹션)을 동적으로 렌더링 -->
+                    <!-- ✅ JS가 통화 기록 섹션을 렌더링 -->
                     <div id="call-history-root"></div>
 
                     <div class="footer">
